# atx-webide

./: .gitignore  .travis.yml  ABOUT.rst  README.md  publish.sh  requirements.txt  setup.cfg  setup.py
atxweb/: __init__.py  __main__.py  server.py  trace.py
atxweb/common/: trace.py  trace_python2.py  trace_python3.py
atxweb/static/: index.html
atxweb/static/blockly/: blockly_compressed.js  blocks_compressed.js  python_compressed.js
atxweb/static/css/: index.css  prism.css
atxweb/static/js/: index.js  prism.js
atxweb/static/libs/blockly/: blockly_compressed.js  python_compressed.js
