[metadata]
name = atx-webide
author = wuxc
author-email = wuxc08@gmail.com
summary = Helper tool for writing atx testcase using google blockly.
license = Apache
home-page = https://github.com/openatx/atx-webide
description-file = ABOUT.rst
requires-python = >=2.7
classifier =
	Environment :: Console
	Intended Audience :: Developers
	Operating System :: OS Independent
	Programming Language :: Python :: 2.7

[files]
packages =
	atxweb