[metadata]
name = atx-webide
author = wuxc, codeskyblue
author-email = wuxc08@gmail.com
summary = tool for writing atx script
license = Apache
home-page = https://github.com/openatx/atx-webide
description-file = ABOUT.rst
requires-python = >=2.7
classifier =
	Environment :: Console
	Intended Audience :: Developers
	Operating System :: OS Independent
	Programming Language :: Python :: 2.7

[files]
packages =
	atxweb
